--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -4,14 +4,15 @@
 
 
 
-En el nuevo ambiente de las tecnologías de la información cualquier movimiento de almacenamiento masivo puede ser realizado mediante modelos basados en el cómputo nube. \\
+En el nuevo ambiente de las tecnologías de la información el almacenamiento de archivos puede ser realizado mediante modelos basados en el cómputo nube. \\
 El cómputo nube es un término utilizado para nombrar así a la provisión de servicios de almacenamiento a través de Internet que ha sido utilizado para facilitar el cambio de los modelos de negocios, agilizar procesos y reducir costos de operación ~\cite{Nubei}. \\  
 
 Uno de los mayores beneficios que ofrece este servicio es la virtualización de los centros de datos, que pueden operar de manera automatizada, sin necesidad de la presencia de una persona física y pueden ser gestionados en cualquier momento. De acuerdo con un estudio realizado por la consultora Market Research Media, estima que el cómputo nube generará \$270,000 millones de dólares en 2020, por lo que empresas como Google, Amazon, IBM, Oracle y Apple han adoptado este sistema como parte del servicio brindado a sus consumidores, por ejemplo, Google Drive o iCloud, a través de los cuales, con sólo estar conectados a Internet, los usuarios tienen la posibilidad de utilizarlos ~\cite{Nubecomp}. \\ 
 
 Sin embargo, este servicio también presenta algunas desventajas que tal vez nosotros como usuarios no podemos percibir tan fácilmente. Una de ellas es que al almacenar un archivo en realidad no sabemos quién o qué entidades tienen acceso a él. Éste tema se está volviendo cada vez más preocupante sobre todo para instituciones o empresas que cuentan con información confidencial y también debido a diversos ataques por adversarios. \\
 
-Es por eso que se ha optado por la opción del uso de la criptografía, la cual es una ciencia que se encarga del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, su objetivo no es sólo mantener los datos secretos, sino también protegerlos contra posibles modificaciones o manipulaciones y comprobar la fuente de los mismos  ~\cite{fundamentos}. \\
+Es por eso que se ha optado por la opción del uso de la criptografía, la cual es una ciencia que se encarga de ocultar información, de tal forma que cualquier otra persona no pueda acceder al contenido. \\
+%del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, su objetivo no es sólo mantener los datos secretos, sino también protegerlos contra posibles modificaciones o manipulaciones y comprobar la fuente de los mismos  ~\cite{fundamentos}. \\
 
 Ahora bien, la información que circula en dispositivos electrónicos es mayor a la memoria disponible que ofrecen estos, a medida que el volumen de información aumenta, también lo hace la demanda para los servicios de almacenamiento en la nube. Entonces los usuarios tienden a creer que el espacio en la nube es ilimitado y comienzan a guardar grandes cantidades de archivos, por lo cual nos enfrentamos al problema de la duplicación de archivos. \\ 
 
@@ -66,9 +67,7 @@ Debido a los limitados recursos financieros y altos gastos de almacenamiento de 
 
 Para entender un poco más acerca de la problemática a la que se enfrenta el almacenamiento en la nube, mostramos el siguiente estudio realizado por EFE/Cisco: \\ 
 
-EFE/Cisco realizó una estimación en el año 2014 en su cuarto informe anual Índice Global sobre la nube (2013-2018), donde prevé que en 2018 la mitad de la población mundial tendrá internet en sus hogares y más de la mitad almacenará contenidos en servicios personales de almacenamiento en la nube. El estudio adelanta que se triplicará el crecimiento de tráfico en los centros de datos en los próximos cinco años y la nube representará el 76\% de ese total, mientras que en 2013 éste solo representaba el 54\%, lo que supondría un aumento anual de 32\%. El tráfico en centros de datos, contando el saliente a usuarios finales, entre centros y dentro del propio sistema superará los 3.1 zettabytes de 2013 y llegará a los 8.6 que se esperan registrar en 2018, suponiendo una tasa anual del 23\% ~\cite{cisco}. 
-\\ 
-En 2018, el 53\% de los usuarios de internet con red doméstica usarán servicios de almacenamiento en la nube, aportando un tráfico medio por usuario de 811 Mb mensuales, lejos de los 186 Mb de 2013. Además, se espera, según la nota que publicó Cisco, que en 2018 el 69\% de la carga de trabajo en la nube se realizará en centros de datos con nubes privadas, un dato que fue del 78\% en 2013. El resto de cargas de trabajo, el 31\%, se realizarán en la nube pública, subiendo desde el 22\% del 2012 ~\cite{cisco}. Crecimiento en el tráfico de información en la nube ~\ref{fig:1-2-1} \\
+EFE/Cisco realizó una estimación en el año 2014 en su cuarto informe anual Índice Global sobre la nube (2013-2018), donde podemos observar en la figura ~\ref{fig:1-2-1} como el almacenamiento ha ido incrementado y seguirá incrementado \\
 
 \begin{figure}[H]
 \centering
@@ -77,11 +76,13 @@ En 2018, el 53\% de los usuarios de internet con red doméstica usarán servicio
 	\label{fig:1-2-1}
 \end{figure}
 
-Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en línea es la duplicación de archivos, existen muchas copias en la nube de un mismo archivo que se encuentra presente en diferentes cuentas de usuarios. Un ejemplo: El usuario registrado e identificado dentro de la nube como \textit{Usuario A}, el día de hoy desea almacenar un archivo \textbf{Archivo F} que corresponde a la especificación de los requisitos para la obtención de una beca escolar. Este usuario para no extraviar o modificar el archivo lo almacena en la nube y ahí queda disponible para cuando él lo solicite. Ahora este usuario comparte este archivo mediante un dispositivo \textit{USB} a su amigo ya que este también desea conocer los requisitos para solicitar una beca escolar, este amigo el cuál es otro usuario registrado e identificado dentro de la nube como \textit{Usuario B} también quiere almacenar este archivo \textbf{Archivo F} en la nube, ya que requiere utilizar el espacio de memoria en su dispositivo \textit{USB} para otras actividades y no desea perder los requisitos para la solicitud de su beca escolar. \\
+Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en línea es la duplicación de archivos, existen muchas copias en la nube de un mismo archivo que se encuentra presente en diferentes cuentas de usuarios. Un ejemplo: el usuario registrado e identificado dentro de la nube como \textit{Usuario A}, el día de hoy desea almacenar un archivo \textbf{Archivo F} que corresponde a la especificación de los requisitos para la obtención de una beca escolar. Este usuario para no extraviar o modificar el archivo lo almacena en la nube y ahí queda disponible para cuando él lo solicite. Ahora este usuario comparte este archivo mediante un dispositivo \textit{USB} a su amigo ya que este también desea conocer los requisitos para solicitar una beca escolar, este amigo el cuál es otro usuario registrado e identificado dentro de la nube como \textit{Usuario B} también quiere almacenar este archivo \textbf{Archivo F} en la nube, ya que requiere utilizar el espacio de memoria en su dispositivo \textit{USB} para otras actividades y no desea perder los requisitos para la solicitud de su beca escolar. \\
 
 Ahora en la nube se encuentran almacenados 2 copias del \textbf{Archivo F} por dos diferentes usuarios identificados como \textit{Usuario A} y \textit{Usuario B}, ambos almacenaron el mismo archivo en el mismo lugar, sin darse cuenta que ahora este archivo se encuentra duplicado en la nube. \\
 
-Otro punto importante es la seguridad e integridad de la gran cantidad de información que se almacena en la nube. Este servicio de almacenamiento está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información. Uno de los ataques que se han intentado realizar por dichos adversarios es el ataque por fuerza bruta, el cual es una forma de recuperar una clave probando todas las combinaciones posibles hasta encontrar aquella que permite el acceso al archivo. 
+Otro punto importante es la seguridad e integridad de la gran cantidad de información que se almacena en la nube. Este servicio de almacenamiento está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información. Uno de los ataques que se han intentado realizar por dichos adversarios es el ataque por fuerza bruta, el cual es una forma de recuperar una clave probando todas las combinaciones posibles hasta encontrar aquella que permite el acceso al archivo. \\
+
+Por un lado si tenemos la información en claro es relativamente fácil poder detectar que dos archivos son los mismos, ya que solo se compara bit a bit, pero si estos mismos archivos cada usuario cifra su archivo el resultado serian dos archivos diferentes por esto es que no es posible detectar archivos duplicados con este método. \\
  \\  \\
 
 
@@ -108,7 +109,7 @@ Como se mencionó anteriormente encontramos dos principales problemas, uno es la
 
 Para combatir el problema de la confidencialidad, proponemos el uso de la criptografía, a cada usuario se le proporcionará una llave con la que puede cifrar y descifrar archivos, pero no podemos usar criptografía de manera tan simple ya que si dos usuarios cifran el mismo archivo daría como resultado dos archivos cifrados distintos, entonces al hacer la comparación de ambos archivos no habría forma de atacar el problema de la duplicación de archivos. Así que nos encontramos con otro problema, pues evitamos que los archivos estén expuestos a adversarios, pero seguimos con el problema de archivos duplicados.\\
 
- Por lo tanto, nos basaremos en el protocolo denominado DupLESS el cual combina varias herramientas criptográficas de tal forma que se pueda tener un control de las llaves relacionadas con los archivos y los usuarios sin comprometer el contenido e integridad de la información, de esta manera si dos usuarios quieren cifrar el mismo archivo obtendrán la misma llave. Por consiguiente, al cifrar los archivos obtendríamos como resultado el mismo archivo cifrado, esta vez al hacer la comparación se detectará la duplicación de archivos y únicamente se guardará una copia del archivo, ahorrando espacio de memoria y costos de infraestructura. \\
+ Por lo tanto, nos basaremos en el protocolo denominado DupLESS ~\cite{Bellare} el cual combina varias herramientas criptográficas de tal forma que se pueda tener un control de las llaves relacionadas con los archivos y los usuarios sin comprometer el contenido e integridad de la información, de esta manera si dos usuarios quieren cifrar el mismo archivo obtendrán la misma llave. Por consiguiente, al cifrar los archivos obtendríamos como resultado el mismo archivo cifrado, esta vez al hacer la comparación se detectará la duplicación de archivos y únicamente se guardará una copia del archivo, ahorrando espacio de memoria y costos de infraestructura. \\
 
 Como se observa en la siguiente figura ~\ref{fig:1-3-1} varios usuarios realizan peticiones para subir archivos, pero se puede notar que algunos son iguales, por lo que pasan por un proceso de eliminación de duplicados antes descrito y finalmente se almacena una copia de cada uno. \\
 
