--- a/TT-2016-B045/archivosTex/protocoloDupless.tex
+++ b/TT-2016-B045/archivosTex/protocoloDupless.tex
@@ -1,5 +1,12 @@
 %\chapter{Preliminares. } % (fold)
 
+En este capítulo se pretende establecer mediante un análisis, la comparativa realizada entre sistemas o prototipos existentes que hacen uso de herramientas criptográficas para proveer un servicio similar al protocolo criptográfico que se propone en este trabajo terminal. Dicho análisis contedrá detalladamente aquellos elementos técnicos que tienen relación con la criptografía y de que manera se estan utilizando. De igual forma, el capítulo contiene la explicación y el funcionamiento del protocolo criptográfico Dupless, dicho protocolo es la base de la investigación, de la cuál surge el desarrollo del protocolo criptográfico que se presenta para este trabajo terminal. 
+
+
+
+
+
+
 \section{Estado del Arte. }
 \begin{tabular}{ |p{8cm}|p{8cm}| }
 \hline
